refactor(movie-api): upgrade to Spring Boot 4.0.5 and remove providerId from User
- Bump spring-boot-starter-parent from 4.0.3 to 4.0.5
- Remove unused providerId field and constructor param from User entity
- Add @Column constraints on User and Movie fields
- Fix token constants and issuer/audience values in TokenProvider
- Replace String.format() with .formatted() throughout
- Treat blank text param as absent in movie search filter
- Return null instead of empty string for missing OAuth2 attributes
- Use Collections.emptyMap() instead of null for local user attributes
- Promote DateTimeFormatter to static constant in MovieDto
- Remove redundant @Repository from repository interfaces
- Make helper methods static in DatabaseInitializer
- Add jq preflight check to test-endpoints.sh
- Update Joker movie poster URL in seed data
- Bump brace-expansion to 1.1.13 and picomatch to 4.0.4 in lockfile
- Sync AGENTS.md and README.md with current Spring Boot and API versions