@@ -20,7 +20,7 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) {
         User user = userService.getUserByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException(String.format("Username %s not found", username)));
+                .orElseThrow(() -> new UsernameNotFoundException("Username %s not found".formatted(username)));
         return CustomUserDetails.ofLocalUser(
                 user.getId(),
                 user.getUsername(),
